[maven-release-plugin] prepare release spring-clinic-0.0.2

--- a/clinic-data/pom.xml
+++ b/clinic-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>spring-clinic</artifactId>
         <groupId>com.spring.clinic</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
