--- a/clinic-web/pom.xml
+++ b/clinic-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>spring-clinic</artifactId>
         <groupId>com.spring.clinic</groupId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +12,7 @@
         <dependency>
             <artifactId>clinic-data</artifactId>
             <groupId>com.spring.clinic</groupId>
-            <version>0.0.2</version>
+            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
